<resources>
    <string name="app_name">WeatherApp</string>
    <string name="name_your_city_town">Name your city/town</string>
    <string name="weather">WEATHER</string>
    <string name="select_button">SELECT</string>
    <string name="temp">Температура</string>
    <string name="temp_feels_like">Ощущается как</string>
    <string name="wind_speed">Ветер</string>
    <string name="pressure">Давление</string>
    <string name="visibility">Видимость</string>
    <string name="weather_data_info">Статус погоды</string>
</resources>