<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/weather_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/weather_data_info"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/temp_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/temp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/temp_field"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/temp_feels_like_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp_lin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/temp_feels_like"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/temp_feels_like_field"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wind_speed_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp_feels_like_row">

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wind_speed"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/wind_speed_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressure_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_row">

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/pressure_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/visibility_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pressure_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/visibility" />

        <TextView
            android:id="@+id/visibility_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>