<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="65dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/weather"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/area_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginHorizontal="100dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/name_your_city_town"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather" />

    <Button
        android:id="@+id/select_area_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/area_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="150dp"
        android:text="@string/select_button"
        android:backgroundTint="@color/black"
        android:onClick="setArea" />

</androidx.constraintlayout.widget.ConstraintLayout>